--- a/provider/harmovis/mclient/package.json
+++ b/provider/harmovis/mclient/package.json
@@ -4,9 +4,11 @@
   "description": "Harmoware-VIS Synerex provider",
   "main": "index.js",
   "scripts": {
-      "start": "webpack-dev-server --port 10080 --mode development",
-      "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --port 10080 --mode development",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "lint": "eslint --ext .js,.jsx --ignore-path .gitignore ./src",
+    "lintfix": "eslint --fix --ext .js,.jsx --ignore-path .gitignore ./src"
   },
   "keywords": [
     "Harmoware",
@@ -15,23 +17,36 @@
   "author": "Nobuo Kawaguchi",
   "license": "Apache-2.0",
   "dependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
     "bootstrap": "^4.1.3",
-    "css-loader": "^2.1.1",
-    "hard-source-webpack-plugin": "^0.13.1",
     "harmoware-vis": "^1.1.4",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-icons-kit": "^1.3.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "css-loader": "^2.1.1",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "hard-source-webpack-plugin": "^0.13.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "webpack": "^4.39.2",
+    "webpack": "^4.39.3",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   }
